@@ -621,6 +621,8 @@
 #define ID_GAME_VIEWCOMMENTSSUBTITLES   40310
 #define FCEUX_CONTEXT_VIEWCOMMENTSSUBTITLES 40311
 #define ID_GAME_VIEWCOMMENTSSUBTITLES40312 40312
+#define ID_OPTIONS_COLLAPSETO1COLUMN    40313
+#define MEMW_OPTIONS_EXPANDCOLLAPSE     40314
 #define IDC_DEBUGGER_ICONTRAY           55535
 #define MW_ValueLabel2                  65423
 #define MW_ValueLabel1                  65426
@@ -630,7 +632,7 @@
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        125
-#define _APS_NEXT_COMMAND_VALUE         40313
+#define _APS_NEXT_COMMAND_VALUE         40315
 #define _APS_NEXT_CONTROL_VALUE         1191
 #define _APS_NEXT_SYMED_VALUE           101
 #endif
